# Gym-Khana

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  retrain_race_naive.sh  retrain_race_with_resets.sh  train.sh  train_race.sh  train_recover.sh
.claude/agents/: code-iteration-improver.md  feature-implementation-planner.md  feature-implementer.md  feature-test-strategist.md
.github/workflows/: ci.yml  lint.yml  publish.yml
commonroad/vehiclemodels/: parameters_vehicle1.py  vehicle_dynamics_ks.py  vehicle_dynamics_kst.py  vehicle_dynamics_linearized.py  vehicle_dynamics_mb.py  vehicle_dynamics_st.py  vehicle_dynamics_std.py  vehicle_parameters.py
docs/: Doxyfile  analysis.rst  architecture.rst  conf.py  configuration.rst  controllers.rst  index.rst  installation.rst  known_issues.rst  quickstart.rst  requirements.txt  training.rst
docs/api/: action.rst  base_classes.rst  collision_models.rst  dynamic_models.rst  env.rst  laser_models.rst  observation.rst  rendering.rst  track.rst
docs/plan/: DRIFT_MAP_PLAN.md  DRIFT_PLAN.md  FIRST_ORDER_ACT_LAG.md  GYMKHANA_RENAME.md  KMPC_PORT_PLAN.md  MPC_PORT_PLAN.md  MULTI_MAP_PLAN.md  OBS_NORM_PLAN.md  OPTUNA_SYS_ID.md  OPTUNA_SYS_ID_LOSS.md  OPTUNA_SYS_ID_OVERVIEW.md  OPTUNA_SYS_ID_SENSITIVITY.md  OPTUNA_SYS_ID_SENSITIVITY_REPORT.md  OPT_RACELINE.md  PPO_PLAN.md  READTHEDOCS_UI_UPDATE.md  READTHEDOCS_UPDATE.md  REVERSE_DIRECTION_PLAN.md  REWARD_PLAN.md  RL_DEBUG_PLAN.md  SINGLE_TRACK_PACEJKA.md  STMPC_PORT_PLAN.md  STMPC_PORT_PLAN_STEP_6.md  STMPC_RECOVER_TUNING.md
examples/: beta_r_traj_plot.py  braking.py  controller_example.py  drift_debug.py  examples_utils.py  kmpc_race_example.py  lag.py  mpc_example.py  p_steer_controller.py  pd_steer_controller.py  phase_plane_analysis.py  ppo_drift.py  ppo_example.py  random_trackgen.py  run_in_empty_track.py  stmpc_example.py  stmpc_race_example.py  test_inference_rate.py  video_recording.py  waypoint_follow.py
examples/analysis/: beta_r_avg_plot.py  beta_r_traj_Drift_large_plot.py  beta_r_traj_IMS_plot.py  beta_r_traj_plot.py  critic_value_3d_plot.py  fig_format.py  frenet_u_n_phase_plane.py  morris_param_sensitivity.py  obs_sensitivity.py  phase_plane_analysis.py  rec_perf_aggr_plot.py  run_all_beta_r.sh  traj_compare.py
examples/controllers/: __init__.py  base.py  learned_controller.py  mpc_dynamics.py  mpc_utils.py  p_steer_controller.py  (+1 more)
gymkhana/: __init__.py  presets.py
maps/: README.md  convert_to_grayscale.py  extract_waypoints.py
mpc-ref/: KMPC_PORTING_README.md
plan/: ACTION_NORM_PLAN.md  CURRICULUM_PLAN.md  DRIFT_MAP_PLAN.md  DRIFT_PLAN.md  KNOWLEDGE_TRANSFER.md  MPC_RACE_PLAN.md  MULTI_MAP_PLAN.md  OBS_NORM_PLAN.md  PPO_PLAN.md  RECOVERY_DESIGN_PLAN.md  RECOVERY_IMPL_PLAN.md  REWARD_PLAN.md  RL_DEBUG_PLAN.md  RL_NORM_ACTION_PLAN.md
tests/: conftest.py  drift_debug.py  drift_observation.py  drift_observation_test.py  legacy_scan_gen.py  test_action.py  test_collision_checks.py  test_collision_config.py  test_compare_mb.py  test_compare_std.py  test_cubic_spline.py  test_curriculum_callback.py  test_curvature_validation.py  test_deflection_config.py  test_dynamics.py  test_env_reset.py  test_f110_env.py  test_get_reward.py  test_gymkhana_env.py  test_instability.py  test_lookahead_fast_vs_slow.py  test_lookahead_widths.py  test_mpc_dynamics.py  test_normalize_config.py  test_normalize_logic.py  test_obs_min_max.py  test_observation.py  test_params_yaml.py  test_presets.py  test_raceline.py  test_recovery_mode.py  test_renderer.py  test_scan_sim.py  test_std_model.py  test_track.py  test_train_common.py  test_training_utils.py  test_utils.py  test_vehicle_models.py
train/: callbacks.py  export_onnx.py  extract_global_track_norm_bounds.py  ppo_drift.py  ppo_example.py  ppo_race.py  ppo_recover.py  train_common.py  train_ppo_drift.py  train_ppo_example.py  train_utils.py  training_utils.py
(+194 files in other folders)
