[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra"
testpaths =[
    "tests",
    "integration",
]

[tool.poetry]
name = "f1tenth_gym"
version = "1.0.0dev"
description = "Gym environment for F1TENTH"
license = "MIT"
authors = [
    "Hongrui Zheng",
    "Renukanandan Tumu",
    "Luigi Berducci",
    "Ahmad Amine",
    "Joseph Auckley",
    "Matthew O'Kelly",
    "Aman Sinha"
]
maintainers = [
    "Hongrui Zheng",
]
readme = "README.md"
homepage = "https://f1tenth.org"
repository = "https://github.com/f1tenth/f1tenth_gym"
documentation = "https://f1tenth-gym.readthedocs.io/en/latest/"
packages = [
    {include = "f1tenth_gym"},
]

[tool.poetry.dependencies]
python = ">=3.10"
gymnasium = "^0.29.1"
numpy = ">=1.18"
pillow = ">=9.0.1"
scipy = ">=1.7.3"
numba = ">=0.55.2"
PyYAML = ">=5.3.1"
pygame = "^2.5.2"
opencv-python = "^4.9.0.80"
yamldataclassconfig = "^1.5.0"
requests = "^2.31.0"
shapely = "^2.0.2"
pyqtgraph = "^0.13.7"
PyQt6 = "^6.7.1"
wandb = "^0.17.0"
stable-baselines3 = {extras = ["extra"], version = "^2.7.0"}
omegaconf = "^2.3.0"
scikit-image = "^0.25.2"
tensorboard = "^2.20.0"
lark = "^1.3.1"
pytest-cov = "^7.0.0"
ruff = "^0.15.1"
pre-commit = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "E402", "E721", "E741", "F601", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
