[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra"
testpaths =[
    "tests",
    "integration",
]

[tool.poetry]
name = "gymkhana"
version = "1.1.1"
description = "Gym environment for racing, drift, and safety"
license = "MIT"
authors = [
    "Teodor Ilie",
    "Hongrui Zheng",
    "Renukanandan Tumu",
    "Luigi Berducci",
    "Ahmad Amine",
    "Joseph Auckley",
    "Matthew O'Kelly",
    "Aman Sinha"
]
maintainers = [
    "Teodor Ilie",
]
readme = "README.md"
homepage = "https://teoilie.com/"
repository = "https://github.com/TeoIlie/Gym-Khana"
documentation = "https://gym-khana.readthedocs.io/en/latest/"
packages = [
    {include = "gymkhana"},
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.urls]
Changelog = "https://github.com/TeoIlie/Gym-Khana/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gymnasium = "^0.29.1"
numpy = ">=1.18"
pillow = ">=9.0.1"
scipy = ">=1.7.3"
numba = ">=0.55.2"
PyYAML = ">=5.3.1"
pygame = "^2.5.2"
opencv-python = "^4.9.0.80"
yamldataclassconfig = "^1.5.0"
requests = "^2.31.0"
pyqtgraph = "^0.13.7"
PyQt6 = "^6.7.1"
onnx = "^1.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^7.0.0"
ruff = "^0.15.1"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
pre-commit = "^4.5.1"
salib = "^1.5.2"

[tool.poetry.group.train.dependencies]
wandb = "^0.17.0"
stable-baselines3 = {extras = ["extra"], version = "^2.7.0"}
omegaconf = "^2.3.0"
scikit-image = "^0.25.2"
tensorboard = "^2.20.0"
lark = "^1.3.1"
pydantic = "^2.12.5"
casadi = "^3.7.2"
onnxruntime = ">=1.12,<1.24"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx_rtd_theme = ">=2.0"
myst-parser = ">=3.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "E402", "E721", "E741", "F601", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
